[package]
name = "distortify"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.85"
colored = "3.0.0"
futures = "0.3.31"
image = "0.25.5"
imageproc = "0.25.0"
indicatif = "=0.17.9"
indicatif-log-bridge = "0.2.3"
inquire = "0.7.5"
iter_tools = "0.24.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
urlencoding = "2.1.3"
waitgroup = "0.1.2"
walkdir = "2.5.0"
